--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,38 @@
   /* --main-line-height : 1.5; */
 }
 
+@font-face {
+  font-family: "Source Sans Pro";
+  font-weight: 400;
+  font-display: swap;
+  src: url("../fonts/source-sans-pro-v21-latin-regular.woff2") format("woff2"), 
+  url("../fonts/source-sans-pro-v21-latin-regular.woff") format("woff"); 
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  font-weight: 600;
+  font-display: swap;
+  src: url("../fonts/source-sans-pro-v21-latin-600.woff2") format("woff2"), 
+  url("../fonts/source-sans-pro-v21-latin-600.woff") format("woff"); 
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  font-weight: 700;
+  font-display: swap;
+  src: url("../fonts/source-sans-pro-v21-latin-700.woff2") format("woff2"), 
+  url("../fonts/source-sans-pro-v21-latin-700.woff") format("woff"); 
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  font-weight: 900;
+  font-display: swap;
+  src: url("../fonts/source-sans-pro-v21-latin-900.woff2") format("woff2"), 
+  url("../fonts/source-sans-pro-v21-latin-900.woff") format("woff"); 
+}
+
 /* GENERAL */
 
 *,
@@ -20,11 +52,11 @@
 html{
   height: 100%;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 img{
   display: block;
-  height: auto;
 }
 
 body{
@@ -33,10 +65,7 @@ body{
   height: 100%;
   margin: 0;
   padding: 0;
-  /* font-family: "Roboto", "Arial", sans-serif; */
-  /* font-size: 16px; */
-  /* font-weight: 400; */
-  /* line-height: var(--main-line-height); */
+  font-family: "Source Sans Pro", "Arial", sans-serif;
 }
 
 /* VISUALLY-HIDDEN */
@@ -57,11 +86,26 @@ body{
 /* CONTAINER */
 
 .container{
-  /* max-width: YOUR CONTAINER MAX-WIDTH PX HERE; */
+  max-width: 1150px;
   margin-right: auto;
   margin-left: auto;
   padding-right: 20px;
   padding-left: 20px;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: #fafafa;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #facf0f;
+  transition: .3s;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(247, 227, 134);
 }
 
 /* STICKY-FOOTER */
@@ -70,6 +114,381 @@ body{
   flex-grow: 1;
 }
 
+.site-header {
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+  background-color: #fafafa;
+  box-shadow: 0 10px 100px rgb(0 0 0 / 20%);
+}
 
+.site-header__menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.site-header__list {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 
+.site-header__link {
+  font-size: 16px;
+  font-weight: 700;
+  margin-left: 50px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #333;
+  text-decoration: none;
+  transition: .3s;
+}
+
+.site-header__link:hover {
+  color: #facf0f;
+}
+
+.hero {
+  position: relative;
+  background: linear-gradient(to right,rgba(245,245,245,.8),rgba(245,245,245,.8)), url("../images/common-bg.svg");
+  background-position: center;
+  padding-top: 290px;
+  padding-bottom: 180px;
+}
+
+.hero__box {
+  max-width: 900px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.hero__title {
+  font-size: 5rem;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  text-align: center;
+  color: #111;
+  font-weight: 700;
+  margin: 0;
+  margin-bottom: 36px;
+}
+
+.hero__text {
+  color: #333;
+  font-size: 28px;
+  font-weight: 400;
+  text-align: center;
+  line-height: 1.6;
+  margin: 0;
+  margin-bottom: 36px;
+}
+
+.hero__link {
+  display: inline-block;
+  background-color: #facf0f;
+  color: #333;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  display: inline-block;
+  font-weight: 700;
+  border-radius: 5px;
+  box-shadow: 0 5px 15px 0 rgb(0 0 0 / 15%);
+  transition: transform .3s;
+  padding: 15px 80px;
+  text-decoration: none;
+}
+
+.hero__link:hover {
+  transform: translateY(-5px);
+}
+
+.social__list {
+  position: fixed;
+  left: 0;
+  top: 50%;
+  background: #fff;
+  box-shadow: rgb(100 100 111 / 20%) 0 7px 29px 0;
+  margin: 0;
+  padding: 0;
+  padding: 5px;
+  list-style: none;
+}
+
+.social__link {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 5px;
+  transition: .3s;
+}
+
+.social__link:hover {
+  background: rgba(250,207,15,.2);
+}
+
+.social__img {
+  width: 30px;
+  height: 30px;
+}
+
+.magic {
+  position: absolute;
+  top: calc(50% + 350px);
+  left: calc(50% - 10px);
+  width: 25px;
+  height: 40px;
+  border: 2px solid #333;
+  border-radius: 60px;
+  overflow: hidden;
+}
+
+.crown {
+  position: fixed;
+  left: calc(50% + 630px);
+  bottom: calc(50% - 380px);
+}
+
+.magic__span {
+  display: block;
+  width: 5px;
+  height: 5px;
+  position: absolute;
+  left: calc(50% - 2px);
+  transform: translateX(-50%);
+  background-color: #333;
+  border-radius: 50%;
+  opacity: 1;
+  animation: wheel 1.5s infinite;
+  animation-direction: alternate-reverse;
+  -webkit-animation: wheel 1.5s infinite;
+}
+
+@keyframes wheel {
+  to {
+    transform: translateY(30px);
+  }
+  from {
+    transform: translateY(0);
+  }
+}
+
+.about {
+  background-color: #fafafa;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.about__box {
+  width: 900px;
+  margin: 0 auto;
+}
+
+.about__title {
+  font-size: 3rem;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  text-align: center;
+  color: #111;
+  font-weight: 700;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.about__title::after {
+  display: block;
+  content: "";
+  margin: 0 auto;
+  width: 3rem;
+  height: 5px;
+  background: #facf0f;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+
+.about__text {
+  display: block;
+  text-align: center;
+  color: #555;
+  font-size: 1.5rem;
+  font-weight: 500;
+  max-width: 80rem;
+  margin: auto;
+  line-height: 1.6;
+  margin: 0;
+  margin-bottom: 90px;
+}
+
+.my {
+  display: flex;
+}
+
+.my__start {
+  width: 700px;
+  margin-right: 90px;
+}
+
+.my__title {
+  font-weight: 700;
+  font-size: 1.8rem;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.my__text {
+  font-size: 26px;
+  font-weight: 400;
+  color: #666;
+  line-height: 1.7;
+}
+
+.my__spn {
+  color: #555;
+  font-weight: 600;
+}
+
+.my__span {
+  display: inline-block;
+  padding: 1rem 2rem;
+  margin-bottom: 15px;
+  margin-right: 1.5rem;
+  font-size: 1.4rem;
+  background: rgba(153,153,153,.2);
+  border-radius: 5px;
+  font-weight: 600;
+  color: #666;
+}
+
+.project {
+  background-color: #fafafa;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.project__box {
+  width: 900px;
+  margin: 0 auto;
+}
+
+.project__title {
+  font-size: 3rem;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  text-align: center;
+  color: #111;
+  font-weight: 700;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.project__title::after {
+  display: block;
+  content: "";
+  margin: 0 auto;
+  width: 3rem;
+  height: 5px;
+  background: #facf0f;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+
+.project__text {
+  display: block;
+  text-align: center;
+  color: #555;
+  font-size: 1.5rem;
+  font-weight: 500;
+  max-width: 80rem;
+  margin: auto;
+  line-height: 1.6;
+  margin: 0;
+  margin-bottom: 90px;
+}
+
+.project__img {
+  border: 1px solid #666;
+  border-radius: 5px;
+}
+
+.project__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.project__item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.project__info {
+  width: 400px;
+  margin-left: 30px;
+  text-align: center;
+}
+
+.project__title2 {
+  font-weight: 700;
+  font-size: 30px;
+  margin: 0;
+  margin-bottom: 2rem;
+}
+
+.project__text2 {
+  font-size: 18px;
+  color: #666;
+  line-height: 1.7;
+  margin-bottom: 3rem;
+}
+
+.contact {
+  background: linear-gradient(to right,rgba(245,245,245,.8),rgba(245,245,245,.8)), url("../images/common-bg.svg");
+  background-position: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.contact__info {
+  width: 900px;
+  margin: 0 auto;
+}
+
+.contact__title {
+  font-size: 3rem;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  text-align: center;
+  color: #111;
+  font-weight: 700;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.contact__title::after {
+  display: block;
+  content: "";
+  margin: 0 auto;
+  width: 3rem;
+  height: 5px;
+  background: #facf0f;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+
+.contact__text {
+  display: block;
+  text-align: center;
+  color: #555;
+  font-size: 1.5rem;
+  font-weight: 500;
+  max-width: 80rem;
+  margin: auto;
+  line-height: 1.6;
+  margin: 0;
+  margin-bottom: 90px;
+}
