--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,7 @@ body{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 10;
 }
 
 .site-header__list {
@@ -147,7 +148,8 @@ body{
 }
 
 .site-header__link {
-  font-size: 16px;
+  position: relative;
+  font-size: 18px;
   font-weight: 700;
   margin-left: 50px;
   text-transform: uppercase;
@@ -157,8 +159,22 @@ body{
   transition: .3s;
 }
 
-.site-header__link:hover {
+.site-header__link::before {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
   color: #facf0f;
+  width: 0;
+  overflow: hidden;
+  transition: .5s;
+  border-right: 2px solid #facf0f;
+}
+
+.site-header__link:hover::before {
+  width: 100%;
+  filter: drop-shadow(0 0 25px #facf0f);
 }
 
 .hero {
