--- a/css/main.css
+++ b/css/main.css
@@ -168,7 +168,7 @@ body{
   color: #facf0f;
   width: 0;
   overflow: hidden;
-  transition: .5s;
+  transition: .4s;
   border-right: 2px solid #facf0f;
 }
 
@@ -205,8 +205,7 @@ body{
   margin-bottom: 36px;
 }
 
-.hero__title::before
-{
+/* .hero__title::before{
   content: attr(data-text);
   position: absolute;
   display: block;
@@ -218,19 +217,19 @@ body{
   overflow: hidden;
   white-space: nowrap;
   border-right: 4px solid #333;
-  animation: animate 8s linear infinite;
+  animation: animate 4s linear infinite;
   animation-timing-function: ease-in-out;
-  filter: drop-shadow(0 0 30px #333) drop-shadow(0 0 60px #333);
+  filter: drop-shadow(0 0 30px #facf0f) drop-shadow(0 0 60px #facf0f);
 }
 
 @keyframes animate {
   0%,10%,100% {
     width: 0;
   }
-  80%,90% {
+  60%,80% {
     width: 100%;
   }
-}
+} */
 
 .hero__text {
   color: #333;
