--- a/css/main.css
+++ b/css/main.css
@@ -193,16 +193,17 @@ body{
 
 .hero__title {
   position: relative;
-  width: 680px;
   display: block;
   font-size: 5rem;
   text-transform: uppercase;
   letter-spacing: 3px;
-  text-align: center;
   color: #111;
+  text-align: center;
   font-weight: 700;
-  margin: 0 auto;
+  margin: 0;
   margin-bottom: 36px;
+  animation: zoomIn 1s linear none;
+  animation-timing-function: ease-in-out;
 }
 
 /* .hero__title::before{
@@ -210,19 +211,18 @@ body{
   position: absolute;
   display: block;
   top: 0;
-  left: 0.5px;
-  width: 350px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
-  color: #fafafa;
   overflow: hidden;
   white-space: nowrap;
   border-right: 4px solid #333;
-  animation: animate 4s linear infinite;
-  animation-timing-function: ease-in-out;
   filter: drop-shadow(0 0 30px #facf0f) drop-shadow(0 0 60px #facf0f);
-}
 
-@keyframes animate {
+} */
+
+/* @keyframes animate {
   0%,10%,100% {
     width: 0;
   }
