--- a/css/main.css
+++ b/css/main.css
@@ -192,16 +192,30 @@ body{
 }
 
 .hero__title {
+  position: relative;
   font-size: 5rem;
   text-transform: uppercase;
   letter-spacing: 3px;
-  color: #111;
+  color: transparent;
   text-align: center;
   font-weight: 700;
   margin: 0;
   margin-bottom: 36px;
   animation: flipInX 2s linear none;
   animation-timing-function: ease-in-out;
+}
+
+.hero__title::before {
+  position: absolute;
+  content: attr(data-text);
+  display: block;
+  width: 100%;
+  height: 100%;
+  color: #111;
+  font-size: 5rem;
+  letter-spacing: 3px;
+  font-weight: 700;
+
 }
 
 /* .hero__title::before{
