--- a/css/main.css
+++ b/css/main.css
@@ -357,14 +357,14 @@ body{
 
 @keyframes wheel {
   0% {
-    transform: translateY(0);
+    transform: translateY(-150%);
     opacity: 1;
   }
   20% {
-    opacity: 0.8;
+    opacity: 1;
   }
   40% {
-    opacity: 0.6;
+    opacity: 0.8;
   }
   60% {
     opacity: 0.4;
